--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,12 +18,12 @@
   <string name="logout_success">Log Out Success!!</string>
   <string name="AddProject_enterName">Input the name of the project</string>
   <string name="AddProject_enterSummary">Input the summary of the project</string>
-  <string name="AddProject_enterManager">Select the manager</string>
-  <string name="AddProject_hint">Please fill in the complete information to create the project</string>
+  <string name="AddProject_enterManager">Select the member</string>
+  <string name="AddProject_hint">Please select multiple project members to manage the project</string>
   <string name="AddProject_Title">NEW PROJECT</string>
   <string name="AddProject_Name">Project Name</string>
   <string name="AddProject_Summary">Project Summary</string>
-  <string name="AddProject_Manager">Project Manager</string>
+  <string name="AddProject_Manager">Project Members</string>
   <string name="AddProject_btn">ADD</string>
   <string name="AddProject_success">Succeed</string>
   <string name="AddProject_fail">Failed</string>
@@ -160,4 +160,64 @@
   <string name="friend_id">ID</string>
   <string name="friend_add">Add Friend</string>
   <string name="friend_delete">Delete Friend</string>
+
+  <!-- 新增的成員 -->
+  <string name="add_member_button">Add</string>
+  <string name="select_member">Select Member</string>
+  <string name="project_members">Project Members</string>
+  <string name="remove_member">Remove</string>
+  <string name="member_already_selected">This member has already been selected</string>
+  <string name="member_added_success">Member added: %s</string>
+  <string name="member_removed_success">Member removed: %s</string>
+  <string name="please_select_member">Please select or enter a member account</string>
+  <string name="at_least_one_member">Please select at least one project member</string>
+  <string name="only_members_can_delete">Only project members can delete projects</string>
+  <string name="issue_can_only_assign_to_members">Issues can only be assigned to project members</string>
+  <string name="available_members_count">Issues can only be assigned to project members (total %d members)</string>
+  <string name="no_project_members">Warning: This project has no members, cannot create issues</string>
+  <string name="add_project_delbtn">Delete</string>
+
+  <string name="delete_project_members_info">This will also remove %d project members associations</string>
+  <string name="delete_project_not_found">Project deletion failed: Project not found</string>
+  <string name="database_init_failed">Database initialization failed: %s</string>
+  <string name="views_init_failed">Interface component loading failed, please check layout file</string>
+  <string name="data_setup_failed">Data setup failed: %s</string>
+  <string name="member_account_required">Please select or enter a member account first</string>
+  <string name="member_account_not_found">Account "%s" not found, please confirm the account is correct</string>
+  <string name="loading_accounts_error">Error loading account list: %s</string>
+  <string name="project_name_required">Please enter project name</string>
+  <string name="project_summary_required">Please enter project summary</string>
+  <string name="project_member_required">Please select at least one project member</string>
+  <string name="project_create_success">Project "%s" created successfully!</string>
+  <string name="project_create_failed">Project creation failed, please try again</string>
+  <string name="project_create_partial_success">Project created successfully, but some members failed to add</string>
+  <string name="form_cleared">Form cleared</string>
+  <string name="operation_completed">Operation completed successfully</string>
+  <string name="warning_no_accounts">Warning: No user accounts found in database</string>
+  <string name="manager_name">Manager Name</string>
+
+  <string name="excel_no_projects_to_export">No projects to export</string>
+  <string name="excel_user_projects">User Projects</string>
+  <string name="excel_export_success">%s Excel file exported successfully: %s</string>
+  <string name="excel_export_io_error">IO error occurred during Excel export: %s</string>
+  <string name="excel_export_unexpected_error">Unexpected error occurred during export: %s</string>
+  <string name="excel_project_list_sheet">Project List</string>
+  <string name="excel_project_id">Project ID</string>
+  <string name="excel_project_name">Project Name</string>
+  <string name="excel_project_summary">Project Summary</string>
+  <string name="excel_project_members">Project Members</string>
+  <string name="excel_no_members">No Members</string>
+  <string name="excel_issues_suffix"> Issues</string>
+  <string name="excel_project_label">Project: %s (ID: %d)</string>
+  <string name="excel_members_label">Project Members: %s</string>
+  <string name="excel_issue_id">Issue ID</string>
+  <string name="excel_issue_subject">Subject</string>
+  <string name="excel_issue_summary">Summary</string>
+  <string name="excel_issue_start_time">Start Time</string>
+  <string name="excel_issue_end_time">End Time</string>
+  <string name="excel_issue_status">Status</string>
+  <string name="excel_issue_assignee">Assignee</string>
+  <string name="excel_creating_workbook">Creating Excel workbook...</string>
+  <string name="excel_saving_file">Saving file...</string>
+  <string name="excel_file_saved">File saved to: %s</string>
 </resources>
